add get requests to readings request spec and regenerated api docs
